# libcontrol

./: .gitmodules  CMakeLists.txt  README.md  TODO
include/: CMakeLists.txt  care.h  continuous_to_discrete.h  control.h  control_internal.h  controllability.h  dare.h  observability.h
source/: CMakeLists.txt  care.cc  continuous_to_discrete.cc  control_internal_ctrb.cc  controllability.cc  dare.cc  observability.cc
source/tests/: CMakeLists.txt  test_care.cc  test_continuous_to_discrete.cc  test_controllability.cc  test_dare.cc  test_observability.cc
